Regression: Crash when last input from File Output node is deleted #99949

Closed
opened 2022-07-25 01:16:14 +02:00 by Damien Picard · 6 comments
Member

System Information
Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00

Blender Version
Broken: version: 3.3.0 Alpha, branch: master (modified), commit date: 2022-07-24 02:48, hash: 0fcc04e7bf
Worked: 3.1.2; probably introduced in e4278b72bb

Short description of error
When a File Output compositing node gets its last input deleted, Blender crashes in debug mode.

Exact steps for others to reproduce the error

  • Run blender with --debug option
  • Go to the compositing workspace
  • Enable Use Nodes
  • Add a File Output node
  • Open the node properties in the N panel and click the X button next to the Image field
  • Blender crashes
**System Information** Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master (modified), commit date: 2022-07-24 02:48, hash: `0fcc04e7bf` Worked: 3.1.2; probably introduced in e4278b72bb **Short description of error** When a File Output compositing node gets its last input deleted, Blender crashes in debug mode. **Exact steps for others to reproduce the error** * Run blender with `--debug` option * Go to the compositing workspace * Enable Use Nodes * Add a File Output node * Open the node properties in the N panel and click the X button next to the Image field * Blender crashes
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I suspect 7aab508e32 or could be this one e4278b72bb
not bisected though (good and bad commits for me are 5035fbdd23 - 98d4872d7f)

I suspect 7aab508e3273 or could be this one e4278b72bb not bisected though (good and bad commits for me are 5035fbdd23ba - 98d4872d7f42)
Pratik Borhade changed title from Crash when last input from File Output node is deleted to Regression: Crash when last input from File Output node is deleted 2022-07-25 07:30:32 +02:00

This issue was referenced by 9644740230

This issue was referenced by 96447402309ae79bdca92a0c40c49a4861596081

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-08-09 16:45:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99949
No description provided.