Fix T99949: Crash when last input from File Output node is deleted

Regression since e4278b72bb1a.

Need to check inputs exist prior to requesting first input as it
might not exist.